; ModuleID = '/home/carl/AnghaBench/reactos/dll/cpl/sysdm/extr_startrec.c_ReadFreeldrSection.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/cpl/sysdm/extr_startrec.c_ReadFreeldrSection.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32, i32, i32 }

@MAX_PATH = common dso_local global i32 0, align 4
@HEAP_ZERO_MEMORY = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [9 x i32] [i32 66, i32 111, i32 111, i32 116, i32 84, i32 121, i32 112, i32 101, i32 0], align 4
@.str.1 = private unnamed_addr constant [8 x i32] [i32 82, i32 101, i32 97, i32 99, i32 116, i32 79, i32 83, i32 0], align 4
@.str.2 = private unnamed_addr constant [11 x i32] [i32 83, i32 121, i32 115, i32 116, i32 101, i32 109, i32 80, i32 97, i32 116, i32 104, i32 0], align 4
@.str.3 = private unnamed_addr constant [8 x i32] [i32 79, i32 112, i32 116, i32 105, i32 111, i32 110, i32 115, i32 0], align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.TYPE_4__* (i32, i32*)* @ReadFreeldrSection to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.TYPE_4__* @ReadFreeldrSection(i32 %0, i32* %1) #0 {
  %3 = alloca %struct.TYPE_4__*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca %struct.TYPE_4__*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32* %1, i32** %5, align 8
  %13 = load i32, i32* @MAX_PATH, align 4
  %14 = zext i32 %13 to i64
  %15 = call i8* @llvm.stacksave()
  store i8* %15, i8** %8, align 8
  %16 = alloca i32, i64 %14, align 16
  store i64 %14, i64* %9, align 8
  %17 = load i32, i32* @MAX_PATH, align 4
  %18 = zext i32 %17 to i64
  %19 = alloca i32, i64 %18, align 16
  store i64 %18, i64* %10, align 8
  %20 = load i32, i32* %4, align 4
  %21 = load i32*, i32** %5, align 8
  %22 = call i32 @SetupFindFirstLineW(i32 %20, i32* %21, i32* null, i32* %7)
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %25, label %24

24:                                               ; preds = %2
  store %struct.TYPE_4__* null, %struct.TYPE_4__** %3, align 8
  store i32 1, i32* %12, align 4
  br label %89

25:                                               ; preds = %2
  %26 = call i32 (...) @GetProcessHeap()
  %27 = load i32, i32* @HEAP_ZERO_MEMORY, align 4
  %28 = call %struct.TYPE_4__* @HeapAlloc(i32 %26, i32 %27, i32 4)
  store %struct.TYPE_4__* %28, %struct.TYPE_4__** %6, align 8
  %29 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %30 = icmp eq %struct.TYPE_4__* %29, null
  br i1 %30, label %31, label %32

31:                                               ; preds = %25
  store %struct.TYPE_4__* null, %struct.TYPE_4__** %3, align 8
  store i32 1, i32* %12, align 4
  br label %89

32:                                               ; preds = %25
  %33 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %34 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %33, i32 0, i32 3
  %35 = load i32, i32* %34, align 4
  %36 = load i32*, i32** %5, align 8
  %37 = call i32 @wcscpy(i32 %35, i32* %36)
  br label %38

38:                                               ; preds = %84, %32
  %39 = mul nuw i64 4, %14
  %40 = udiv i64 %39, 4
  %41 = trunc i64 %40 to i32
  %42 = call i32 @SetupGetStringFieldW(i32* %7, i32 0, i32* %16, i32 %41, i32* %11)
  %43 = icmp ne i32 %42, 0
  br i1 %43, label %45, label %44

44:                                               ; preds = %38
  br label %87

45:                                               ; preds = %38
  %46 = mul nuw i64 4, %18
  %47 = udiv i64 %46, 4
  %48 = trunc i64 %47 to i32
  %49 = call i32 @SetupGetStringFieldW(i32* %7, i32 1, i32* %19, i32 %48, i32* %11)
  %50 = icmp ne i32 %49, 0
  br i1 %50, label %52, label %51

51:                                               ; preds = %45
  br label %87

52:                                               ; preds = %45
  %53 = call i32 @_wcsnicmp(i32* %16, i8* bitcast ([9 x i32]* @.str to i8*), i32 8)
  %54 = icmp ne i32 %53, 0
  br i1 %54, label %65, label %55

55:                                               ; preds = %52
  %56 = call i32 @_wcsnicmp(i32* %19, i8* bitcast ([8 x i32]* @.str.1 to i8*), i32 7)
  %57 = icmp ne i32 %56, 0
  br i1 %57, label %61, label %58

58:                                               ; preds = %55
  %59 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %60 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %59, i32 0, i32 0
  store i32 1, i32* %60, align 4
  br label %64

61:                                               ; preds = %55
  %62 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %63 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %62, i32 0, i32 0
  store i32 0, i32* %63, align 4
  br label %64

64:                                               ; preds = %61, %58
  br label %83

65:                                               ; preds = %52
  %66 = call i32 @_wcsnicmp(i32* %16, i8* bitcast ([11 x i32]* @.str.2 to i8*), i32 10)
  %67 = icmp ne i32 %66, 0
  br i1 %67, label %73, label %68

68:                                               ; preds = %65
  %69 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %70 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %69, i32 0, i32 2
  %71 = load i32, i32* %70, align 4
  %72 = call i32 @wcscpy(i32 %71, i32* %19)
  br label %82

73:                                               ; preds = %65
  %74 = call i32 @_wcsnicmp(i32* %16, i8* bitcast ([8 x i32]* @.str.3 to i8*), i32 7)
  %75 = icmp ne i32 %74, 0
  br i1 %75, label %81, label %76

76:                                               ; preds = %73
  %77 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %78 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %77, i32 0, i32 1
  %79 = load i32, i32* %78, align 4
  %80 = call i32 @wcscpy(i32 %79, i32* %19)
  br label %81

81:                                               ; preds = %76, %73
  br label %82

82:                                               ; preds = %81, %68
  br label %83

83:                                               ; preds = %82, %64
  br label %84

84:                                               ; preds = %83
  %85 = call i64 @SetupFindNextLine(i32* %7, i32* %7)
  %86 = icmp ne i64 %85, 0
  br i1 %86, label %38, label %87

87:                                               ; preds = %84, %51, %44
  %88 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  store %struct.TYPE_4__* %88, %struct.TYPE_4__** %3, align 8
  store i32 1, i32* %12, align 4
  br label %89

89:                                               ; preds = %87, %31, %24
  %90 = load i8*, i8** %8, align 8
  call void @llvm.stackrestore(i8* %90)
  %91 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  ret %struct.TYPE_4__* %91
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @SetupFindFirstLineW(i32, i32*, i32*, i32*) #2

declare dso_local %struct.TYPE_4__* @HeapAlloc(i32, i32, i32) #2

declare dso_local i32 @GetProcessHeap(...) #2

declare dso_local i32 @wcscpy(i32, i32*) #2

declare dso_local i32 @SetupGetStringFieldW(i32*, i32, i32*, i32, i32*) #2

declare dso_local i32 @_wcsnicmp(i32*, i8*, i32) #2

declare dso_local i64 @SetupFindNextLine(i32*, i32*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
